<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    app:cardBackgroundColor="@color/colorPrimary"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

<ImageView
    android:id="@+id/flag_id"
    android:layout_width="120dp"
    android:layout_height="100dp"
    android:background="@color/colorPrimaryDark"
    />
    />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:paddingLeft="5dp"
        android:text="@string/country_name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextThemeing"
        android:text="@string/total_cases"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="130dp"
        />

    <TextView
        android:id="@+id/country_total_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorConfirmed"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="77575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextThemeing"
        android:text="@string/total_deaths"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="220dp"
        />

    <TextView
        android:id="@+id/country_total_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="77575" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_recovered"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="310dp"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/country_total_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRecovered"
        android:layout_marginLeft="320dp"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:text="77575" />


</androidx.cardview.widget.CardView>